--- a/CiTi_CUP2.0/JS/main_inter.html
+++ b/CiTi_CUP2.0/JS/main_inter.html
@@ -24,14 +24,14 @@
                             <!-- ::before -->
                             <!-- 左侧logo -->
                             <li role="menuitem" tabindex="0" class="el_li">
-                                <a href="#">
+                                <a href="main_inter.html">
                                     <img src="../images/favicon-32x32.png" alt="">
                                 </a>
                             </li>
                             <!--  -->
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG指数</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG评级</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG投资</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG指数</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG评级</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_invest.html">ESG投资</a></li>
 
                             <!-- 登录按钮 -->
                             <li role="menuitem" tabindex="0" class="el_li" style="float: right;">
@@ -44,8 +44,8 @@
                                 </button>
                             </li>
 
-                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="#">关于</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="#">文档</a></li>
+                             <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="about.html">关于</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="doc.html">文档</a></li>
                         </ul>
                     </div>
                 </header>
