add framework for index and eval:

--- a/CiTi_CUP2.0/JS/about.html
+++ b/CiTi_CUP2.0/JS/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>关于</title>
     <link rel="stylesheet" href="../CSS/about.css">
 </head>
 
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                             <!--  -->
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG指数</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_index.html">ESG指数</a></li>
                             <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG评级</a></li>
                             <li role="menuitem" tabindex="0" class="el_li"><a href="esg_invest.html">ESG投资</a></li>
 
