--- a/CiTi_CUP2.0/JS/main_inter.html
+++ b/CiTi_CUP2.0/JS/main_inter.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main_interface</title>
+    <title>主页</title>
     <link rel="stylesheet" href="../CSS/main_inter.css">
 </head>
 
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                             <!--  -->
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG指数</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_index.html">ESG指数</a></li>
                             <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG评级</a></li>
                             <li role="menuitem" tabindex="0" class="el_li"><a href="esg_invest.html">ESG投资</a></li>
 
@@ -148,6 +148,17 @@
 
                 <!-- 第三部分 -->
                 <div class="intro_sys">
+                    <br>
+                    <br>
+                    <br>
+                    <form class="search" action="/" style="margin:auto;max-width:800px;max-height:50px;">
+                      <input type="text" placeholder="输入代码/名称，搜索企业ESG评分..." name="search2">
+                      <button type="submit"><img src="../images/search.png" style="width:70px;height:70px;"></button>
+                    </form>
+
+                    <br>
+                    <br>
+                    <br>
 
                     <h1 id="intro1">评级体系介绍：测算企业碳排放并评级的综合性金融服务平台</h1>
 
