--- a/CiTi_CUP2.0/JS/esg_eval.html
+++ b/CiTi_CUP2.0/JS/esg_eval.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ESG评级</title>
+    <link rel="stylesheet" href="../CSS/main_inter.css">
 </head>
-<body>
 
+<body>
+    <noscript></noscript>
+
+    <div id="app">
+        <!-- 总体页面 -->
+        <div class="home">
+            <!-- 不包含最下面声明 -->
+            <section class="main">
+                <!-- 题头 -->
+                <header class="nav">
+                    <div class="bar">
+                        <ul role="menubar" class="nav_bar">
+                            <!-- ::before -->
+                            <!-- 左侧logo -->
+                            <li role="menuitem" tabindex="0" class="el_li">
+                                <a href="main_inter.html">
+                                    <img src="../images/favicon-32x32.png" alt="">
+                                </a>
+                            </li>
+                            <!--  -->
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_index.html">ESG指数</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_eval.html">ESG评级</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="esg_invest.html">ESG投资</a></li>
+
+                            <!-- 登录按钮 -->
+                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;">
+                                <button type="button" class="el_button">
+                                    <a href="../JS/login.html">
+                                        <i class="el_user">
+                                            ::before
+                                        </i>
+                                        登录</a>
+                                </button>
+                            </li>
+
+                             <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="about.html">关于</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="doc.html">文档</a></li>
+                        </ul>
+                    </div>
+                </header>
+                
+                <!-- 展示图片 -->
+                <img src="../images/01.jpg" style="width:100%;height:100%;">
+
+                <!-- 第三部分 -->
+                <div class="intro_sys">
+                    
+                    <h1 id="intro1">企业ESG评级</h1>
+
+                    <br>
+                    <form class="search" action="/" style="margin:auto;max-width:800px;max-height:50px;">
+                      <input type="text" placeholder="输入代码/名称，搜索企业ESG评分..." name="search2">
+                      <button type="submit"><img src="../images/search.png" style="width:70px;height:70px;"></button>
+                    </form>
+
+                    <br>
+                    <br>
+                    <br>
+
+                    <div class="intro3">
+
+                        <h3>
+                            评级方法介绍……
+                        </h3>
+                    </div> 
+
+
+                </div>
+
+        </div>
+
+        </section>
+    </div>
+    </div>
+    <script type="test/javascript" src="jquery_min.js"></script>
+    <script type="test/javascript" src="../JS/photo.js">
+    </script>
 </body>
+
 </html>
