--- a/CiTi_CUP3.0/JS/ESG_Rating_web_2.html
+++ b/CiTi_CUP3.0/JS/ESG_Rating_web_2.html
@@ -22,7 +22,7 @@
                         <div class="title_one">
                             <!-- 左侧 -->
                             <div class="one_left">
-                                <h2>ESG评级的网站</h2>
+                                <h2>ESG权威评级汇总</h2>
                             </div>
                             <!-- 右侧 更多》 -->
                             <div class="one_right">
