--- a/CiTi_CUP3.0/JS/main_inter2.0.html
+++ b/CiTi_CUP3.0/JS/main_inter2.0.html
@@ -192,7 +192,7 @@
                                     <div class="title_one">
                                         <!-- 左侧 -->
                                         <div class="one_left">
-                                            <h2>ESG评级的网站</h2>
+                                            <h2>ESG权威评级汇总</h2>
                                         </div>
                                         <!-- 右侧 更多》 -->
                                         <div class="one_right">
@@ -284,7 +284,7 @@
                                     <div class="title_one">
                                         <!-- 左侧 -->
                                         <div class="one_left">
-                                            <h2>ESG相关的博客</h2>
+                                            <h2>ESG时事新闻</h2>
                                         </div>
 
 
@@ -295,11 +295,11 @@
                                     <div class="card card-1">
                                         <div class="contents">
                                             <img src="../images/flower.png" alt="first">
-                                            <h3>First</h3>
+                                            <h4>Governance in Brief – March 16, 2023</h4>
                                             <div class="line"></div>
-                                            <p class="description">内容介绍</p>
+                                            <p class="description">Canadian regulators have issued new guidance for the country's banks and insurance companies to better manage climate-related risks.</p>
                                             <div class="button">
-                                                <span>more</span>
+                                                <a href="https://www.sustainalytics.com/esg-research/resource/governance-in-brief/governance-in-brief-march-16-2023" target="_blank">more</a>
                                             </div>
 
                                         </div>
@@ -308,11 +308,11 @@
                                     <div class="card card-2">
                                         <div class="contents">
                                             <img src="../images/flower.png" alt="two">
-                                            <h3>Two</h3>
+                                            <h4>Credit Suisse takeover governance process ‘disastrous’</h4>
                                             <div class="line"></div>
-                                            <p class="description">内容介绍</p>
+                                            <p class="description">UBS’s takeover by Credit Suisse has been labelled an example of “disastrous” governance, in a deal that raises questions about the preferential treatment of some shareholders at the expense of others who will lose everything.</p>
                                             <div class="button">
-                                                <span>more</span>
+                                                <a href="https://esgclarity.com/credit-suisse-takeover-governance/" target="_blank">more</a>
                                             </div>
 
                                         </div>
@@ -321,11 +321,11 @@
                                     <div class="card card-3">
                                         <div class="contents">
                                             <img src="../images/flower.png" alt="three">
-                                            <h3>Three</h3>
+                                            <h4>如何平衡短期投入与长期效果？企业共议ESG时代机遇</h4>
                                             <div class="line"></div>
-                                            <p class="description">内容介绍</p>
+                                            <p class="description">中国节能皓信环境顾问集团可持续发展总监胡静文表示，在充满不确定性和众多外部挑战的今天，ESG不是企业发展的目标，而是企业发展的基石。“如何把握趋势，预测未来，规避风险，使企业长久健康地运营下去，ESG是最为可靠和有效的手段。”</p>
                                             <div class="button">
-                                                <span>more</span>
+                                                <a href="https://m.nbd.com.cn/articles/2022-05-28/2299895.html" target="_blank">more</a>
                                             </div>
 
                                         </div>
@@ -334,11 +334,11 @@
                                     <div class="card card-4">
                                         <div class="contents">
                                             <img src="../images/flower.png" alt="four">
-                                            <h3>Four</h3>
+                                            <h4>畅谈ESG投资趋势 共创湾区发展新局——中国太保成功举办大湾区ESG投资论坛</h4>
                                             <div class="line"> </div>
-                                            <p class="description">内容介绍</p>
+                                            <p class="description">2月25日，中国太保大湾区ESG投资论坛在广州太平洋金融大厦举行。论坛以“责任投资 绿动未来”为主题，邀请了地方政府、专家学者等齐聚一堂，共同探讨ESG投资的核心理念和实践经验。</p>
                                             <div class="button">
-                                                <span>more</span>
+                                                <a href="http://www.news.cn/money/20230227/9d04ff77ff2547a5bf263d1c00a10b09/c.html" target="_blank">more</a>
                                             </div>
 
                                         </div>
