--- a/CiTi_CUP3.0/JS/intro_system.html
+++ b/CiTi_CUP3.0/JS/intro_system.html
@@ -16,21 +16,21 @@
         <div class="nav">
             <div class="wrap">
                 <div class="logo">
-                    <a href="#">
+                    <a href="../JS/main_inter.html">
                         <img src="../images/favicon-32x32.png" alt="">
                     </a>
                 </div>
                 <div class="nav_bar">
                     <ul>
                         <!-- <li><a href="#">ESG指数</a></li> -->
-                        <li><a href="#">ESG本地宝</a></li>
-                        <li><a href="#">ESG投资</a></li>
+                        <li><a href="../JS/intro_system.html">ESG本地宝</a></li>
+                        <li><a href="../JS/investment_esg.html">ESG投资</a></li>
                     </ul>
                 </div>
                 <div class="introduce">
                     <ul>
                         <li><a href="#">文档</a></li>
-                        <li><a href="#">关于</a></li>
+                        <li><a href="../JS/about.html">关于</a></li>
                     </ul>
                 </div>
                 <div class="login">
