--- a/CiTi_CUP3.0/JS/main_inter.html
+++ b/CiTi_CUP3.0/JS/main_inter.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main_interface</title>
-    <link rel="stylesheet" href="../CSS/main_inter2.0.css">
+    <link rel="stylesheet" href="../CSS/main_inter.css">
 </head>
 
 <body>
@@ -25,14 +25,13 @@
                             <!-- ::before -->
                             <!-- 左侧logo -->
                             <li role="menuitem" tabindex="0" class="el_li">
-                                <a href="#">
+                                <a href="../JS/main_inter.html">
                                     <img src="../images/favicon-32x32.png" alt="">
                                 </a>
                             </li>
                             <!--  -->
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG指数</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG评级</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li"><a href="#">ESG投资</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="../JS/intro_system.html">ESG本地宝</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li"><a href="../JS/investment_esg.html">ESG投资</a></li>
 
 
                             <!-- 登录按钮 -->
@@ -59,7 +58,7 @@
                                 </div>
                             </li>
 
-                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="#">关于</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="../JS/about.html">关于</a></li>
                             <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="#">文档</a></li>
                         </ul>
                     </div>
