--- a/CiTi_CUP3.0/JS/main_inter.html
+++ b/CiTi_CUP3.0/JS/main_inter.html
@@ -196,7 +196,7 @@
                                         <!-- 右侧 更多》 -->
                                         <div class="one_right">
                                             <div class="right_view">
-                                                <a href="../JS/ESG_Rating_web_2.html" class="right_a" aria-label="更多...">
+                                                <a href="../JS/ESG_Rating_web.html" class="right_a" aria-label="更多...">
                                                     <span class="right_span">
                                                         更多
                                                     </span>
