--- a/CiTi_CUP3.0/JS/ESG_Rating_web.html
+++ b/CiTi_CUP3.0/JS/ESG_Rating_web.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESG_Rating_website</title>
-    <link rel="stylesheet" href="../CSS/ESG_Rating_web_2.css">
+    <link rel="stylesheet" href="../CSS/ESG_Rating_web.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                             <!-- 右侧 更多》 -->
                             <div class="one_right">
                                 <div class="right_view">
-                                    <a href="../JS/main_inter2.0.html" class="right_a" aria-label="更多...">
+                                    <a href="../JS/main_inter.html" class="right_a" aria-label="更多...">
                                         <span class="right_span">
                                             返回
                                         </span>
@@ -118,7 +118,7 @@
                                 <p class="description">ESG公司评级提供高度相关、实质性和前瞻性的环境、社会和治理数据和绩效评估。它涵盖了每个行业大约100个指标，并采用了从a +(优秀表现)到D-(糟糕表现)的12分制。</p>
                                 <div class="button">
 
-                                    <a href="#" target="_blank">more</a>
+                                    <a href="https://sg.linkedin.com/company/iss-institutional-shareholder-services" target="_blank">more</a>
                                 </div>
 
                             </div>
@@ -144,7 +144,7 @@
                                 <div class="line"></div>
                                 <p class="description"></p>
                                 <div class="button">
-                                    <a href="#" target="_blank">more</a>
+                                    <a href="https://www.csindex.com.cn/#/" target="_blank">more</a>
                                 </div>
 
                             </div>
