--- a/CiTi_CUP3.0/JS/intro_system.html
+++ b/CiTi_CUP3.0/JS/intro_system.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="introduce">
                     <ul>
-                        <li><a href="#">文档</a></li>
+                        <li><a href="doc.html">文档</a></li>
                         <li><a href="../JS/about.html">关于</a></li>
                     </ul>
                 </div>
