--- a/CiTi_CUP3.0/JS/investment_esg.html
+++ b/CiTi_CUP3.0/JS/investment_esg.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESG投资</title>
     <link rel="stylesheet" href="../CSS/intro_system.css">
-
 </head>
 
 <body>
@@ -29,7 +28,7 @@
                 </div>
                 <div class="introduce">
                     <ul>
-                        <li><a href="#">文档</a></li>
+                        <li><a href="doc.html">文档</a></li>
                         <li><a href="../JS/about.html">关于</a></li>
                     </ul>
                 </div>
@@ -41,6 +40,7 @@
             </div>
         </div>
 
+        <h1 id="intro1">企业ESG评分</h1>
 
         <!-- 搜索框 -->
         <div class="header">
