--- a/CiTi_CUP3.0/JS/main_inter.html
+++ b/CiTi_CUP3.0/JS/main_inter.html
@@ -59,7 +59,7 @@
                             </li>
 
                             <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="../JS/about.html">关于</a></li>
-                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="#">文档</a></li>
+                            <li role="menuitem" tabindex="0" class="el_li" style="float: right;"><a href="doc.html">文档</a></li>
                         </ul>
                     </div>
                 </header>
